Fix layout problem in UI widgets

--- a/css/jquery_mobile.css
+++ b/css/jquery_mobile.css
@@ -33,12 +33,29 @@ body.ui-mobile-viewport, div.ui-mobile-viewport {
 }
 
 .ui-dialog .ui-dialog-content {
-    background: #fafafa !important;
-    min-height: 50px !important;
+  background: #fafafa !important;
+  min-height: 50px !important;
 }
 
-.ui-front {
-    z-index: 1000 !important;
+.ui-dialog .ui-dialog-titlebar {
+  border-radius: 0;
+  border-bottom: 1px solid #d4dbde;
+}
+
+.ui-dialog .ui-dialog-titlebar .ui-dialog-title {
+  line-height: 52px;
+  padding: 0 3em 0 1em;
+}
+
+.ui-dialog .ui-dialog-titlebar .ui-dialog-titlebar-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+}
+
+.ui-widget-overlay {
+  background-color: #666;
 }
 
 #calendarslist .ui-checkbox {
